--- a/software.html
+++ b/software.html
@@ -39,6 +39,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/workiva/job/oxUrbfwN'>Workiva Inc. Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://www.invokegeek.com/jobs/software-engineer-node-js-platform/'>Software Engineer, Node.js Platform ? invokeGeek</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500536002'>Job Application for Principal Software Engineer at MedMen</a></h5> 
+<p><span class="badge badge-light">Culver City, CA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500544002'>Job Application for Staff Software Engineer at MedMen</a></h5> 
+<p><span class="badge badge-light">Culver City, CA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
+<p><span class="badge badge-light">Culver City, CA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -79,7 +103,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -123,11 +147,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.womenwhocode.com/jobs/5416?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign=&utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Software Engineer Manager - Red Hat | Women Who Code</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5416?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign=&utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Software Engineer Manager - Red Hat | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.localwork.ca/job/589802/software-developer/'>Software Developer job with Jobspring Partners | 589802</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.localwork.ca/job/589802/software-developer/'>Software Developer job with Jobspring Partners | 589802</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -159,7 +183,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o7sXafwq&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nBRnqMww'>NICE inContact Careers - Sr. Software Engineer (AWS, Java)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o7sXafwq&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nBRnqMww'>NICE inContact Careers - Sr. Software Engineer (AWS, Java)</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -231,7 +255,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Tennessee United States  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -279,7 +303,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27184'>Software Engineer III - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27184'>Software Engineer III - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -295,7 +319,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -327,7 +351,7 @@
 <p><span class="badge badge-light">Chennai Chennai, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://versett.recruitee.com/o/technical-lead-software-engineering'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://versett.recruitee.com/o/technical-lead-software-engineering'>
       Technical Lead (Software Engineering) - Versett
     </a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
@@ -418,30 +442,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698617351-software-engineer-c-net-angular-web-api'>Technology Navigators Software Engineer - C#/.NET, Angular, Web API | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Houston, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698616438-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Atlanta United States</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698616470-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA  United States</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oXaYafwZ&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nybbqMwB'>Freedom Financial Network Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Tempe, Arizona</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
-<p><span class="badge badge-light">Z?rich, Switzerland</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/launchdarkly/448af03f-706a-4c10-804a-4d7bb4684c69?lever-via=236wXdLYZc'>LaunchDarkly - Software Engineer, Frontend</a></h5> 
-<p><span class="badge badge-light">Oakland, CA</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
-<p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
