--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1936521'>Job Application for Product Designer, New Grad at Thumbtack</a></h5> 
+<h5><a href='http://ausdta.recruiterbox.com/jobs/fk03dvi'>
+    Product Owner - EL 2 at Digital Transformation Agency
+</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/datto/jobs/1741248?gh_src=14f0a1e01'>Job Application for Product Manager, Datto Networking WiFi at Datto Inc.</a></h5> 
+<p><span class="badge badge-light">Boston</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1936521'>Job Application for Product Designer, New Grad at Thumbtack</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=o0HKafwl&__jvst=Employee&__jvsd=svmN1hwr&__jvsc=Twitter&bid=nIRsqMwI'>Ingram Micro Careers - Global Cloud Product Manager-ESP</a></h5> 
@@ -72,11 +82,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Travelopia/743999698189456-conversion-product-manager-quark-expeditions'>Travelopia Conversion Product Manager- Quark Expeditions | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Travelopia/743999698189456-conversion-product-manager-quark-expeditions'>Travelopia Conversion Product Manager- Quark Expeditions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nzvnqMw8'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nzvnqMw8'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -88,7 +98,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooF1afwY&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nGQlqMwy'>Freedom Financial Network Careers - Product Manager, Analytics</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooF1afwY&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nGQlqMwy'>Freedom Financial Network Careers - Product Manager, Analytics</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -104,7 +114,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elevate-security.breezy.hr/p/6720092eab89-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elevate-security.breezy.hr/p/6720092eab89-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -116,7 +126,7 @@
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nobul/16590690-ce8b-4bf6-ad31-646472eb4503'>Nobul - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/nobul/16590690-ce8b-4bf6-ad31-646472eb4503'>Nobul - Product Designer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -136,7 +146,7 @@
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qVeaVfwY&k=Job&j=oTpqbfwD&__jvst=Employee&__jvsd=sXoHygwl&__jvsc=Twitter&bid=ngHiqMwW'>Spartan Race, Inc. Careers - Digital Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qVeaVfwY&k=Job&j=oTpqbfwD&__jvst=Employee&__jvsd=sXoHygwl&__jvsc=Twitter&bid=ngHiqMwW'>Spartan Race, Inc. Careers - Digital Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -240,7 +250,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698611876-product-manager-for-global-sportswear-brand'>Aroghia Group Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698611876-product-manager-for-global-sportswear-brand'>Aroghia Group Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -260,7 +270,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698611056-senior-technical-product-manager-big-data-data-platform-team'>Visa Senior Technical Product Manager, Big Data - Data Platform Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698611056-senior-technical-product-manager-big-data-data-platform-team'>Visa Senior Technical Product Manager, Big Data - Data Platform Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -312,7 +322,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605057-digital-product-manager'>Biogen Digital Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605057-digital-product-manager'>Biogen Digital Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,14 +446,6 @@
 <hr/>
 <h5><a href='https://ircareers.referrals.selectminds.com/jobs/product-manager-vehicle-powered-truck-emea-38374'>Product Manager - Vehicle Powered Truck EMEA - Ingersoll Rand Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://producthire.net/job/product-manager-36/'>Product Manager | PRODUCTHIRE.NET</a></h5> 
-<p><span class="badge badge-light">Singapore</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698490603-senior-product-manager-coverage-tribe-m-f-d-'>Omio Senior Product Manager Coverage Tribe (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
